# artscii

./: .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  biome.json  deno.json  flake.nix  index.html  netlify.toml  nuxt.config.ts  package.json  svelte.config.js  vite.config.ts
.github/workflows/: deploy.yaml  deploy.yml  release.yml
.nuxt/: components.d.ts  imports.d.ts  nitro.json  nuxt.json  tsconfig.json  tsconfig.server.json
.nuxt/dev/: index.mjs  index.mjs.map
.nuxt/manifest/: latest.json
.nuxt/manifest/meta/: 17a6d058-6fce-4e49-b55a-25bf2474861d.json  204183c7-181a-45cf-a36a-ff9206e5340e.json  40696526-6864-40ae-9455-4fa51017494b.json  4149aade-28d8-41a3-b3d8-bb4cd187ba35.json  56e31cfe-ee3c-452a-8ec0-e179adc72aec.json  69e31ec7-3582-46e8-8254-a3f23bd1df67.json  6adcd879-8b37-4980-9012-c59fd28309fa.json  dev.json  ee573e84-c6e1-4802-a6fd-6becd676d280.json
.nuxt/types/: build.d.ts  imports.d.ts  layouts.d.ts  middleware.d.ts  nitro-imports.d.ts  nitro-routes.d.ts  plugins.d.ts
.output/: nitro.json
.output/public/_nuxt/: Bk2wAif_.js  CO0Nmkhq.js  Cg_LIC2j.js  Cod3BA22.js  Cz4lFDg7.js  Dp4NIUhS.js  XtuHo9cg.js  error-404.CxFy6Tx5.css  error-500.DyS015w_.css  ryfEw92u.js
.output/public/_nuxt/builds/: latest.json
.output/server/: package.json
.output/server/chunks/_/: error-500.mjs.map
.output/server/chunks/nitro/: nitro.mjs  nitro.mjs.map
.output/server/chunks/routes/: renderer.mjs  renderer.mjs.map
components/: AsciiOutput.vue  Footer.vue  Header.vue  ImageUploader.vue  SettingsPanel.vue
composables/: useAsciiStore.ts
crates/artscii-cli/: Cargo.toml  README.md
crates/artscii-cli/src/: cli.rs  main.rs  output.rs
crates/artscii-core/: Cargo.toml  README.md
crates/artscii-core/src/: config.rs  error.rs  lib.rs  strategy.rs
crates/artscii-img/: Cargo.toml  README.md
crates/artscii-img/src/: converter.rs  error.rs  lib.rs
crates/artscii-video/: Cargo.toml  README.md
crates/artscii-video/src/: audio.rs  config.rs  decoder.rs  encoder.rs  lib.rs  pipeline.rs
crates/artscii-web/: Cargo.toml  README.md  index.html  style.css
crates/artscii-web/src/: app.rs
pages/: index.vue  video.vue
src/: App.vue  app.css  cli.rs  converter.rs  dithering.rs  error.rs  main.rs  main.ts  output.rs  router.ts  vite-env.d.ts
src/assets/css/: global.css
src/components/: AsciiOutput.vue  Header.vue  ImageUploader.vue  SettingsPanel.vue
src/lib/components/: AsciiOutput.svelte  Footer.svelte  Header.svelte  ImageUploader.svelte  SettingsPanel.svelte
src/lib/stores/: ascii.svelte.ts
src/lib/utils/: asciiConverter.ts
src/lib/utils/dithering/: index.ts  types.ts
src/lib/utils/dithering/strategies/: atkinson.ts  floydSteinberg.ts  riemersma.ts
src/routes/: +layout.svelte  +page.svelte
src/routes/video/: +page.svelte
src/stores/: ascii.ts
src/utils/: asciiConverter.ts
src/utils/dithering/: atkinson.ts
src/views/: Home.vue  Video.vue
stores/: ascii.ts
utils/: asciiConverter.ts
utils/dithering/: atkinson.ts  ditheringStrategy.ts  floydSteinberg.ts  riemersma.ts  utils.ts
